ISPN-9990 Integrationtests missing java.se module